--- a/CaseStudyOne.Rmd
+++ b/CaseStudyOne.Rmd
@@ -166,7 +166,7 @@ names(Beer_Style) <- c("Style","Freq")
 Beer_Style$Style <- as.character(Beer_Style$Style)
 Beer_Style$Style[1] <- "NA"
 Beer_Style <- Beer_Style[order(Beer_Style$Freq, decreasing = TRUE),]
-head(Beer_Style)
+head(Beer_Style,4)
 ```
 
 #This code creates a scatter plot which compares the bitterness (IBU) agaisnt the alcohol content (ABV) in the beer. The difference between this scatter plot and the previous is that this one provides the 4 most popular beer styles color coded.
@@ -175,6 +175,12 @@ head(Beer_Style)
 ggplot(Beer_Data, aes(x=IBU, y=ABV)) + geom_point() +geom_smooth(method=lm) +ggtitle("Bitterness (IBU) vs. Alcohol Content (ABV)") + theme(plot.title = element_text(hjust = 0.5)) + geom_point(data = Beer_Data[grep("IPA",Beer_Data$Style),], aes(x=IBU, y=ABV), colour = "tomato3") + geom_point(data = Beer_Data[grep("APA",Beer_Data$Style),], aes(x=IBU, y=ABV), colour = "goldenrod1") + geom_point(data = Beer_Data[grep("Red Ale",Beer_Data$Style),], aes(x=IBU, y=ABV), colour = "dodgerblue3") + geom_point(data = Beer_Data[grep("Blonde Ale",Beer_Data$Style),], aes(x=IBU, y=ABV), colour = "orchid4")
 
 ```
+
+##### Colors above are as shown for the top 4 beer styles:
+* American IPA - Red
+* American Pale Ale (APA) - Goldenrod
+* American Amber / Red Ale - Blue
+* American Blonde Ale - Purple
 
 #Conclusion: Using this data, we learned that the top markets for breweries are the states of Colorado, California, and Michigan.
 
